v0.9.57 Fix the navbar on firefox
It would blink in and out of existence. Not anymore

--- a/src/main/resources/static/styles/productNavbar.css
+++ b/src/main/resources/static/styles/productNavbar.css
@@ -5,7 +5,6 @@
 #navbarContainer
 {
     position: -webkit-sticky; /* Safari compatibility*/
-    position: sticky;
     top: 0;
     z-index: 100;
 }
